# python_cookie

./: CHANGELOG.md  Makefile  README.md  TODO.md  cookiecutter.json
hooks/: env_builder.py  post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name_short}}/: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_name_short}}/docs/source/: conf.py  index.rst  readme_link.md  usage.rst
{{cookiecutter.project_name_short}}/src/{{cookiecutter.module_name}}/: __init__.py  __main__.py  __version__.py  cli.py  config.py  gui.py  resources.py  {{cookiecutter.module_name}}.py
{{cookiecutter.repo_bare}}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  config.ini  config.toml  pyproject.toml  requirements.txt  todo.md
{{cookiecutter.repo_bare}}/assets/gui_sources/: mainwindow.ui
{{cookiecutter.repo_bare}}/docs/source/: conf.py
{{cookiecutter.repo_bare}}/src/: __init__.py  __main__.py  main.py
{{cookiecutter.repo_bare}}/src/config/: __init__.py  config.py
{{cookiecutter.repo_bare}}/src/gui/: gui.py
{{cookiecutter.repo_bare}}/src/log/: log.py
{{cookiecutter.repo_bare}}/src/{{cookiecutter.module_name}}/: __init__.py  __main__.py  cli.py  config.py  gui.py  log.py  main.py  {{cookiecutter.module_name}}.py
{{cookiecutter.repo_bare}}/src/{{cookiecutter.module_name}}/gui/: __init__.py  gui.py
{{cookiecutter.repo_bare}}/src/{{cookiecutter.module_name}}/ui_sources/: mainwindow.py
