# See https://peps.python.org/pep-0621/

[project]
name = '{{cookiecutter.module_name}}' # No_spaces_allowed
authors = [{ email = 'github@vansteenwegen.org', name = 'Dieter Vansteenwegen' }]
readme = 'README.md'
version = '0.1.0'
description = '{{cookiecutter.project_description}}'
keywords = [{{cookiecutter.keywords}}]
dependencies = [
    {% if cookiecutter.add_gui %}"PyQt5",{% endif %}
    {% if cookiecutter.require_config_file %}"tomli",{% endif %}
]

license = { file = 'LICENSE' }
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
]
requires-python = ">=3.12.6"

[project.urls]
Homepage = 'https://boxfish.be'
Repository = 'https://github.com/dietervansteenwegen/{{cookiecutter.repo_bare}}.git'
Changelog = 'https://github.com/dietervansteenwegen/{{cookiecutter.repo_bare}}/blob/master/CHANGELOG.md'
# Documentation = 'https://readthedocs.org'

[project.scripts]
{{cookiecutter.module_name}} = 'main:main'

{% if cookiecutter.add_gui %}[project.gui-scripts]
{{cookiecutter.module_name}}-gui = "main:main"
[project.optional-dependencies]
gui = ['PyQt5']{% endif %}

[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build.meta'

[tool.uv]
dev-dependencies = ["pre-commit>=2.20.0"]

[tool.uv.pip]
generate-hashes = True

# [tool.setuptools.dynamic]
# dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ['src'] # list of folders that contain the packages (['.'] by default)
include = [
    # 'package_dir',
] # package names should match these glob patterns (['*'] by default)
# exclude = ['my_package.tests*'] # exclude packages matching these glob patterns (empty by default)

[tool.bandit]
exclude_dirs = ["tests"]
# tests = ["B201", "B301"]
# skips = ["B101", "B601"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs",
]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    # Pycodestyle errors
    "E",
    # Pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # McCabe complex structure
    "C901",
    # PEP8 Naming
    "N",
    # Flake8-Bandit
    "S",
    # Flake8-builtins
    "A",
    # Flake8-commas
    "COM",
    # Flake8-datetimez
    "DTZ",
    # Flake8-errmsg
    "EM",
    # Flake8-use-pathlib
    "PTH",
    # tryceratops
    "TRY",
]

ignore = [
    # Use logging.exception instead of logging.error
    "TRY400",
    # Raising and catching exceptions in the same block may lead to confusion
    "TRY301",
{% if cookiecutter.add_gui %}
    # PyQT doesn't adhere to or works well with N801/N802/N803/N813
    "N801",   
    "N802",
    "N803",
    "N813",
{% endif %}
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
exclude = ["*.pyi"]
